--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "native-base": "^2.8.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-modal-datetime-picker": "^6.0.0",
     "react-navigation": "^3.0.8"
   },
   "devDependencies": {
